2008-10-23  Brent Fulgham  <bfulgham@gmail.com>

        Reviewed by Oliver Hunt.

        * platform/network/curl/ResourceRequest.h:  A better implementation
          of CFURLRequest, rather than void*.  This gives better compatibility 
          with the WebKit.idl interface.
        (WebCore::ResourceRequest::cfURLRequest):

2008-10-23  Mike Pinkerton  <pinkerton@chromium.org>

        Reviewed by Eric Seidel.

        PLATFORM(CHROMIUM) uses CG the same way PLATFORM(MAC) does so fix
        ifdefs to reflect that.

        * platform/graphics/cg/GraphicsContextPlatformPrivateCG.h:
        * platform/graphics/cg/ImageCG.cpp:

2008-10-23  Peter Kasting  <pkasting@google.com>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=21833
        Place JavaScript Debugger hooks under #if ENABLE(JAVASCRIPT_DEBUGGER).

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        (WebCore::InspectorController::setWindowVisible):
        (WebCore::InspectorController::windowScriptObjectAvailable):
        (WebCore::InspectorController::close):
        * inspector/InspectorController.h:
        * page/Page.cpp:
        (WebCore::Page::Page):

2008-10-23  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=21817
        Bug 21817: Manual profiler tests should be made into layout tests

        -Moving the tests before diffing so that it's clear what changed.

        * manual-tests/inspector/profiler-test-anonymous-event-handler.html: Removed.
        * manual-tests/inspector/profiler-test-anonymous-function-called-from-different-contexts.html: Removed.
        * manual-tests/inspector/profiler-test-anonymous-function-calls-built-in-functions.html: Removed.
        * manual-tests/inspector/profiler-test-anonymous-function-calls-eval.html: Removed.
        * manual-tests/inspector/profiler-test-apply.html: Removed.