@@ -1,3 +1,13 @@
+2008-10-23  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Fix forward decls to be struct instead of class.
+        https://bugs.webkit.org/show_bug.cgi?id=21838
+
+        * rendering/style/StyleRareInheritedData.h:
+        * rendering/style/StyleRareNonInheritedData.h:
+
 2008-10-23  Brent Fulgham  <bfulgham@gmail.com>
 
         Reviewed by Oliver Hunt.
